@@ -1624,10 +1624,18 @@ static SyscallTableEntry syscall_table[] = {
    LINX_(__NR_io_pgetevents,     sys_io_pgetevents),    // 385
    GENX_(__NR_rseq,              sys_ni_syscall),       // 386
 
+   LINX_(__NR_semget,            sys_semget),           // 393
+   LINXY(__NR_semctl,            sys_semctl),           // 394
+
    LINX_(__NR_shmget,            sys_shmget),           // 395
    LINX_(__NR_shmctl,            sys_shmctl),           // 396
    LINX_(__NR_shmat,             sys_shmat),            // 397
    LINX_(__NR_shmdt,             sys_shmdt),            // 398
+
+   LINX_(__NR_msgget,            sys_msgget),           // 399
+   LINX_(__NR_msgsnd,            sys_msgsnd),           // 400
+   LINXY(__NR_msgrcv,            sys_msgrcv),           // 401
+   LINXY(__NR_msgctl,            sys_msgctl),           // 402
 
    LINXY(__NR_clock_gettime64,   sys_clock_gettime64),  // 403
    LINX_(__NR_clock_settime64,   sys_clock_settime64),  // 404
